--- a/account/index.html
+++ b/account/index.html
@@ -47,7 +47,7 @@
 
         <script>
             const parentUrl = 'https://web-nshugalevkaia.cloud.okteto.net'
-            const child_room_page = 'example.com'
+            const child_room_page = 'https://cute-blancmange-5753a5.netlify.app/'
 
             function displayProjects(projects) {
                 const projectsList = document.getElementById('projectsList');
